--- a/app/layout/navbar.html
+++ b/app/layout/navbar.html
@@ -17,7 +17,7 @@
 					<a ui-sref="phrases" ui-sref-opts="{reload:true}" href="">phrases</a>
 				</li>
 				<li ui-sref-active="active">
-					<a ui-sref="essay" ui-sref-opts="{reload:true}" href="">essay</a>
+					<a ui-sref="essays" ui-sref-opts="{reload:true}" href="">essays</a>
 				</li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right" ng-if="!$root.firebaseUser">
