--- a/app/components/statistics.html
+++ b/app/components/statistics.html
@@ -1,7 +1,37 @@
 <div class="common-container-wr">
 	<div class="container">
+		<div class="panel">
+			<div class="panel-heading panel-heading--styled">How many
+				<strong>words</strong> will I know and
+				<strong>when</strong>?</div>
+			<div class="panel-body" ng-show="!vm.isAbleToMakeForecast">Unable to make a forecast. It is needed to have
+				<strong>words in a dictionary</strong> and they must be added at least
+				<strong>in two different days</strong>.</div>
+			<div class="panel-body" ng-show="vm.isAbleToMakeForecast">
+				<div class="i-want">
+					<input class="form-control" type="number" ng-model="vm.numberOfWordsToKnow" placeholder="Number of words I want to know" ng-change="vm.makeForecast(vm.wordsList, vm.wordsList.length)" />
+				</div>
+				<div class="progress progress-striped active progress-words">
+					<div class="progress-bar progress-bar-info" style="width: {{vm.progressValue}};">
+						<span ng-show="vm.progressValue">{{vm.progressValue}}</span>
+					</div>
+				</div>
+				<div class="row progress-bar-labels">
+					<div class="progress-bar-label">I know
+						<strong>{{vm.wordsList.length}}</strong>
+						<span ng-show="vm.numberOfWordsToKnow &gt; vm.wordsList.length"> of
+							<strong>{{vm.numberOfWordsToKnow}}</strong>.
+							<span>The rest words I will have learnt by
+								<span>
+									<strong>{{vm.forecastDate}}</strong>.</span>
+							</span>
+						</span>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="panel" ng-show="vm.wordsList.length">
-			<div class="panel-heading">How many
+			<div class="panel-heading panel-heading--styled">How many
 				<strong>words</strong> I've learnt</div>
 			<div class="panel-body">
 				<div class="col-sm-9 col-xs-9">
@@ -16,7 +46,7 @@
 			</div>
 		</div>
 		<div class="panel" ng-show="vm.essaysList.length">
-			<div class="panel-heading">How many
+			<div class="panel-heading panel-heading--styled">How many
 				<strong>essays</strong> I've written</div>
 			<div class="panel-body">
 				<div class="col-sm-9 col-xs-9">
