--- a/app/components/statistics.html
+++ b/app/components/statistics.html
@@ -1,7 +1,7 @@
 <div class="common-container-wr">
 	<div class="container">
 		<div class="panel">
-			<div class="panel-heading panel-heading--styled">How many
+			<div class="panel-heading panel-heading--styled">Forecast. How many
 				<strong>words</strong> will I know and
 				<strong>when</strong>?</div>
 			<div class="panel-body" ng-show="!vm.isAbleToMakeForecast">Unable to make a forecast. It is needed to have
